// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch — visual: Figma matrix key states (snapshot) > [visual] disabled=true checked=false 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
      },
      {
        "opacity": 0.5,
      },
      undefined,
    ]
  }
>
  <Pressable
    accessibilityElementsHidden={false}
    accessibilityLabel="Toggle"
    accessibilityRole="switch"
    accessibilityState={
      {
        "checked": false,
        "disabled": true,
      }
    }
    accessible={true}
    aria-disabled={true}
    disabled={true}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onPress={[Function]}
    style={
      [
        {
          "borderRadius": 999,
          "flexShrink": 0,
          "justifyContent": "center",
          "overflow": "hidden",
          "padding": 2,
        },
        {
          "borderRadius": 999,
          "height": 20,
          "width": 36,
        },
      ]
    }
    testID="sw"
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "borderRadius": 999,
            "flexShrink": 0,
            "justifyContent": "center",
            "overflow": "hidden",
            "padding": 2,
          },
          {
            "backgroundColor": {
              "_value": 0,
              "addListener": [Function],
              "interpolate": [Function],
              "removeListener": [Function],
              "setValue": [Function],
            },
            "borderRadius": 999,
            "bottom": 0,
            "height": 20,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 36,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 999,
            "flexShrink": 0,
          },
          {
            "backgroundColor": {
              "_value": 0,
              "addListener": [Function],
              "interpolate": [Function],
              "removeListener": [Function],
              "setValue": [Function],
            },
            "borderRadius": 999,
            "height": 16,
            "transform": [
              {
                "translateX": {
                  "_value": 0,
                  "addListener": [Function],
                  "interpolate": [Function],
                  "removeListener": [Function],
                  "setValue": [Function],
                },
              },
            ],
            "width": 16,
          },
        ]
      }
    />
  </Pressable>
</View>
`;

exports[`Switch — visual: Figma matrix key states (snapshot) > [visual] readOnly=false checked=false 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
      },
      null,
      undefined,
    ]
  }
>
  <Pressable
    accessibilityElementsHidden={false}
    accessibilityLabel="Toggle"
    accessibilityRole="switch"
    accessibilityState={
      {
        "checked": false,
        "disabled": false,
      }
    }
    accessible={true}
    disabled={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onPress={[Function]}
    style={
      [
        {
          "borderRadius": 999,
          "flexShrink": 0,
          "justifyContent": "center",
          "overflow": "hidden",
          "padding": 2,
        },
        {
          "borderRadius": 999,
          "height": 20,
          "width": 36,
        },
      ]
    }
    testID="sw"
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "borderRadius": 999,
            "flexShrink": 0,
            "justifyContent": "center",
            "overflow": "hidden",
            "padding": 2,
          },
          {
            "backgroundColor": {
              "_value": 0,
              "addListener": [Function],
              "interpolate": [Function],
              "removeListener": [Function],
              "setValue": [Function],
            },
            "borderRadius": 999,
            "bottom": 0,
            "height": 20,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 36,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 999,
            "flexShrink": 0,
          },
          {
            "backgroundColor": {
              "_value": 0,
              "addListener": [Function],
              "interpolate": [Function],
              "removeListener": [Function],
              "setValue": [Function],
            },
            "borderRadius": 999,
            "height": 16,
            "transform": [
              {
                "translateX": {
                  "_value": 0,
                  "addListener": [Function],
                  "interpolate": [Function],
                  "removeListener": [Function],
                  "setValue": [Function],
                },
              },
            ],
            "width": 16,
          },
        ]
      }
    />
  </Pressable>
</View>
`;

exports[`Switch — visual: Figma matrix key states (snapshot) > [visual] readOnly=true checked=true 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
      },
      null,
      undefined,
    ]
  }
>
  <Pressable
    accessibilityElementsHidden={false}
    accessibilityLabel="Toggle"
    accessibilityRole="switch"
    accessibilityState={
      {
        "checked": true,
        "disabled": true,
      }
    }
    accessible={true}
    aria-readonly={true}
    disabled={true}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onPress={[Function]}
    style={
      [
        {
          "borderRadius": 999,
          "flexShrink": 0,
          "justifyContent": "center",
          "overflow": "hidden",
          "padding": 2,
        },
        {
          "borderRadius": 999,
          "height": 20,
          "width": 36,
        },
      ]
    }
    testID="sw"
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "borderRadius": 999,
            "flexShrink": 0,
            "justifyContent": "center",
            "overflow": "hidden",
            "padding": 2,
          },
          {
            "backgroundColor": {
              "_value": 1,
              "addListener": [Function],
              "interpolate": [Function],
              "removeListener": [Function],
              "setValue": [Function],
            },
            "borderRadius": 999,
            "bottom": 0,
            "height": 20,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 36,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 999,
            "flexShrink": 0,
          },
          {
            "backgroundColor": {
              "_value": 1,
              "addListener": [Function],
              "interpolate": [Function],
              "removeListener": [Function],
              "setValue": [Function],
            },
            "borderRadius": 999,
            "height": 16,
            "transform": [
              {
                "translateX": {
                  "_value": 1,
                  "addListener": [Function],
                  "interpolate": [Function],
                  "removeListener": [Function],
                  "setValue": [Function],
                },
              },
            ],
            "width": 16,
          },
        ]
      }
    />
  </Pressable>
</View>
`;

exports[`Switch — visual: Figma matrix key states (snapshot) > [visual] size=L unchecked 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
      },
      null,
      undefined,
    ]
  }
>
  <Pressable
    accessibilityElementsHidden={false}
    accessibilityLabel="Toggle"
    accessibilityRole="switch"
    accessibilityState={
      {
        "checked": false,
        "disabled": false,
      }
    }
    accessible={true}
    disabled={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onPress={[Function]}
    style={
      [
        {
          "borderRadius": 999,
          "flexShrink": 0,
          "justifyContent": "center",
          "overflow": "hidden",
          "padding": 2,
        },
        {
          "borderRadius": 999,
          "height": 24,
          "width": 40,
        },
      ]
    }
    testID="sw"
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "borderRadius": 999,
            "flexShrink": 0,
            "justifyContent": "center",
            "overflow": "hidden",
            "padding": 2,
          },
          {
            "backgroundColor": {
              "_value": 0,
              "addListener": [Function],
              "interpolate": [Function],
              "removeListener": [Function],
              "setValue": [Function],
            },
            "borderRadius": 999,
            "bottom": 0,
            "height": 24,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 40,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 999,
            "flexShrink": 0,
          },
          {
            "backgroundColor": {
              "_value": 0,
              "addListener": [Function],
              "interpolate": [Function],
              "removeListener": [Function],
              "setValue": [Function],
            },
            "borderRadius": 999,
            "height": 20,
            "transform": [
              {
                "translateX": {
                  "_value": 0,
                  "addListener": [Function],
                  "interpolate": [Function],
                  "removeListener": [Function],
                  "setValue": [Function],
                },
              },
            ],
            "width": 20,
          },
        ]
      }
    />
  </Pressable>
</View>
`;

exports[`Switch — visual: Figma matrix key states (snapshot) > [visual] size=M checked=true 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
      },
      null,
      undefined,
    ]
  }
>
  <Pressable
    accessibilityElementsHidden={false}
    accessibilityLabel="Toggle"
    accessibilityRole="switch"
    accessibilityState={
      {
        "checked": true,
        "disabled": false,
      }
    }
    accessible={true}
    disabled={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onPress={[Function]}
    style={
      [
        {
          "borderRadius": 999,
          "flexShrink": 0,
          "justifyContent": "center",
          "overflow": "hidden",
          "padding": 2,
        },
        {
          "borderRadius": 999,
          "height": 20,
          "width": 36,
        },
      ]
    }
    testID="sw"
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "borderRadius": 999,
            "flexShrink": 0,
            "justifyContent": "center",
            "overflow": "hidden",
            "padding": 2,
          },
          {
            "backgroundColor": {
              "_value": 1,
              "addListener": [Function],
              "interpolate": [Function],
              "removeListener": [Function],
              "setValue": [Function],
            },
            "borderRadius": 999,
            "bottom": 0,
            "height": 20,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 36,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 999,
            "flexShrink": 0,
          },
          {
            "backgroundColor": {
              "_value": 1,
              "addListener": [Function],
              "interpolate": [Function],
              "removeListener": [Function],
              "setValue": [Function],
            },
            "borderRadius": 999,
            "height": 16,
            "transform": [
              {
                "translateX": {
                  "_value": 1,
                  "addListener": [Function],
                  "interpolate": [Function],
                  "removeListener": [Function],
                  "setValue": [Function],
                },
              },
            ],
            "width": 16,
          },
        ]
      }
    />
  </Pressable>
</View>
`;

exports[`Switch — visual: Figma matrix key states (snapshot) > [visual] size=M unchecked default state 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
      },
      null,
      undefined,
    ]
  }
>
  <Pressable
    accessibilityElementsHidden={false}
    accessibilityLabel="Toggle"
    accessibilityRole="switch"
    accessibilityState={
      {
        "checked": false,
        "disabled": false,
      }
    }
    accessible={true}
    disabled={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onPress={[Function]}
    style={
      [
        {
          "borderRadius": 999,
          "flexShrink": 0,
          "justifyContent": "center",
          "overflow": "hidden",
          "padding": 2,
        },
        {
          "borderRadius": 999,
          "height": 20,
          "width": 36,
        },
      ]
    }
    testID="sw"
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "borderRadius": 999,
            "flexShrink": 0,
            "justifyContent": "center",
            "overflow": "hidden",
            "padding": 2,
          },
          {
            "backgroundColor": {
              "_value": 0,
              "addListener": [Function],
              "interpolate": [Function],
              "removeListener": [Function],
              "setValue": [Function],
            },
            "borderRadius": 999,
            "bottom": 0,
            "height": 20,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 36,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 999,
            "flexShrink": 0,
          },
          {
            "backgroundColor": {
              "_value": 0,
              "addListener": [Function],
              "interpolate": [Function],
              "removeListener": [Function],
              "setValue": [Function],
            },
            "borderRadius": 999,
            "height": 16,
            "transform": [
              {
                "translateX": {
                  "_value": 0,
                  "addListener": [Function],
                  "interpolate": [Function],
                  "removeListener": [Function],
                  "setValue": [Function],
                },
              },
            ],
            "width": 16,
          },
        ]
      }
    />
  </Pressable>
</View>
`;

exports[`Switch — visual: Figma matrix key states (snapshot) > [visual] size=S unchecked 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
      },
      null,
      undefined,
    ]
  }
>
  <Pressable
    accessibilityElementsHidden={false}
    accessibilityLabel="Toggle"
    accessibilityRole="switch"
    accessibilityState={
      {
        "checked": false,
        "disabled": false,
      }
    }
    accessible={true}
    disabled={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onPress={[Function]}
    style={
      [
        {
          "borderRadius": 999,
          "flexShrink": 0,
          "justifyContent": "center",
          "overflow": "hidden",
          "padding": 2,
        },
        {
          "borderRadius": 999,
          "height": 16,
          "width": 28,
        },
      ]
    }
    testID="sw"
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "borderRadius": 999,
            "flexShrink": 0,
            "justifyContent": "center",
            "overflow": "hidden",
            "padding": 2,
          },
          {
            "backgroundColor": {
              "_value": 0,
              "addListener": [Function],
              "interpolate": [Function],
              "removeListener": [Function],
              "setValue": [Function],
            },
            "borderRadius": 999,
            "bottom": 0,
            "height": 16,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 28,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 999,
            "flexShrink": 0,
          },
          {
            "backgroundColor": {
              "_value": 0,
              "addListener": [Function],
              "interpolate": [Function],
              "removeListener": [Function],
              "setValue": [Function],
            },
            "borderRadius": 999,
            "height": 12,
            "transform": [
              {
                "translateX": {
                  "_value": 0,
                  "addListener": [Function],
                  "interpolate": [Function],
                  "removeListener": [Function],
                  "setValue": [Function],
                },
              },
            ],
            "width": 12,
          },
        ]
      }
    />
  </Pressable>
</View>
`;

exports[`Switch — visual: Figma matrix key states (snapshot) > [visual] with children label 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
      },
      null,
      undefined,
    ]
  }
>
  <Pressable
    accessibilityElementsHidden={false}
    accessibilityLabel="Dark mode"
    accessibilityRole="switch"
    accessibilityState={
      {
        "checked": false,
        "disabled": false,
      }
    }
    accessible={true}
    disabled={false}
    focusable={true}
    hitSlop={
      {
        "bottom": 8,
        "left": 8,
        "right": 8,
        "top": 8,
      }
    }
    onPress={[Function]}
    style={
      [
        {
          "borderRadius": 999,
          "flexShrink": 0,
          "justifyContent": "center",
          "overflow": "hidden",
          "padding": 2,
        },
        {
          "borderRadius": 999,
          "height": 20,
          "width": 36,
        },
      ]
    }
    testID="sw"
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "borderRadius": 999,
            "flexShrink": 0,
            "justifyContent": "center",
            "overflow": "hidden",
            "padding": 2,
          },
          {
            "backgroundColor": {
              "_value": 0,
              "addListener": [Function],
              "interpolate": [Function],
              "removeListener": [Function],
              "setValue": [Function],
            },
            "borderRadius": 999,
            "bottom": 0,
            "height": 20,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": 36,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 999,
            "flexShrink": 0,
          },
          {
            "backgroundColor": {
              "_value": 0,
              "addListener": [Function],
              "interpolate": [Function],
              "removeListener": [Function],
              "setValue": [Function],
            },
            "borderRadius": 999,
            "height": 16,
            "transform": [
              {
                "translateX": {
                  "_value": 0,
                  "addListener": [Function],
                  "interpolate": [Function],
                  "removeListener": [Function],
                  "setValue": [Function],
                },
              },
            ],
            "width": 16,
          },
        ]
      }
    />
  </Pressable>
  <Text
    accessible={false}
    style={
      [
        {
          "fontFamily": "JioType",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 20,
        },
        {
          "color": "#000000",
        },
      ]
    }
  >
    Dark mode
  </Text>
</View>
`;
